Travis CI: Run gctest also in enforced mprotect-based VDB

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,12 @@ jobs:
   - compiler: clang
     env:
     - CONF_OPTIONS="--enable-cplusplus"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - compiler: gcc
     env:
     - CONF_OPTIONS="--enable-cplusplus"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - os: osx
     env:
     - CONF_OPTIONS="--enable-cplusplus"
@@ -130,16 +132,20 @@ jobs:
     - MAKEFILE_TARGETS="check cord/de"
   - arch: ppc64le
     compiler: clang
+    env:
+    - GCTEST_WITH_MPROTECT_VDB=true
   - arch: ppc64le
     compiler: gcc
     env:
     - CONF_OPTIONS="--disable-disclaim"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - arch: ppc64le
     compiler: clang
     env:
     - CFLAGS_EXTRA="-O3 -D _FORTIFY_SOURCE=2 -D FORCE_MPROTECT_BEFORE_MADVISE -D GC_UNMAPPED_REGIONS_SOFT_LIMIT=120"
     - CONF_OPTIONS="--enable-gc-assertions --enable-cplusplus --enable-static"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - arch: ppc64le
     compiler: gcc
@@ -159,24 +165,31 @@ jobs:
     env:
     - CFLAGS_EXTRA="-fsanitize=memory,undefined -fno-omit-frame-pointer"
     - CONF_OPTIONS="--disable-shared"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
     - TESTS_CUSTOM_RUN=true
   - arch: ppc64le
     compiler: clang
     env:
     - CMAKE_OPTIONS="-DCMAKE_BUILD_TYPE=Release -Dbuild_tests=ON -Denable_cplusplus=ON -Denable_gc_assertions=ON"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - arch: ppc64le
     compiler: clang
     env:
     - MAKEFILE_NAME=Makefile.direct
     - MAKEFILE_TARGETS="check cord/de"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - arch: s390x
     compiler: clang
     dist: focal
+    env:
+    - GCTEST_WITH_MPROTECT_VDB=true
   - arch: s390x
     compiler: gcc
     dist: focal
+    env:
+    - GCTEST_WITH_MPROTECT_VDB=true
   - addons:
       apt:
         packages:
@@ -189,6 +202,7 @@ jobs:
     - CXX=clang++-12
     - CFLAGS_EXTRA="-O3 -flto -D _FORTIFY_SOURCE=2 -D NO_RETRY_SIGNALS"
     - CONF_OPTIONS="--enable-gc-assertions --enable-cplusplus --enable-dynamic-pointer-mask"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - addons:
       apt:
         packages:
@@ -201,6 +215,7 @@ jobs:
     - CXX=g++-10
     - CFLAGS_EXTRA="-O3 -flto=auto -D _FORTIFY_SOURCE=2 -D PREFER_MMAP_PROT_NONE"
     - CONF_OPTIONS="--enable-cplusplus --disable-shared"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - arch: s390x
     compiler: gcc
@@ -208,6 +223,7 @@ jobs:
     env:
     - MAKEFILE_NAME=Makefile.direct
     - MAKEFILE_TARGETS="check cord/de"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - os: freebsd
     compiler: gcc
     env:
@@ -240,11 +256,13 @@ jobs:
     env:
     - CFLAGS_EXTRA="-O3 -march=native"
     - CONF_OPTIONS="--enable-cplusplus"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - compiler: gcc
     env:
     - CFLAGS_EXTRA="-D _FORTIFY_SOURCE=2"
     - CONF_OPTIONS="--enable-gc-assertions --enable-cplusplus --enable-static"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - addons:
       apt:
@@ -254,6 +272,7 @@ jobs:
     env:
     - CFLAGS_EXTRA="-m32 -funsigned-char -D _FORTIFY_SOURCE=2 -D NO_LONGLONG64"
     - CONF_OPTIONS="--enable-gc-assertions"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - addons:
       apt:
@@ -263,6 +282,7 @@ jobs:
     env:
     - CFLAGS_EXTRA="-m32 -D _FORTIFY_SOURCE=2"
     - CONF_OPTIONS="--enable-gc-assertions --enable-mmap --enable-rwlock"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - os: osx
     env:
     - CFLAGS_EXTRA="-m32 -D _FORTIFY_SOURCE=2"
@@ -271,6 +291,7 @@ jobs:
   - compiler: gcc
     env:
     - CONF_OPTIONS="--disable-threads --enable-checksums --disable-munmap --enable-cplusplus"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: osx
     env:
@@ -294,6 +315,7 @@ jobs:
     env:
     - CFLAGS_EXTRA="-D BSD_TIME -D DEFAULT_STACK_MAYBE_SMALL -D ENABLE_TRACE -D EMPTY_GETENV_RESULTS -D GC_ALWAYS_MULTITHREADED -D GC_NETBSD_THREADS_WORKAROUND -D CPPCHECK"
     - CONF_OPTIONS="--enable-cplusplus --enable-gc-assertions"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: clang
     env:
     - CFLAGS_EXTRA="-march=native -D _FORTIFY_SOURCE=2 -D DEFAULT_VDB -D TEST_WITH_SYSTEM_MALLOC"
@@ -306,6 +328,7 @@ jobs:
     env:
     - CFLAGS_EXTRA="-D _FORTIFY_SOURCE=2 -D TEST_PAGES_EXECUTABLE"
     - CONF_OPTIONS="--with-libatomic-ops=yes --enable-gc-assertions --enable-cplusplus --disable-throw-bad-alloc-library"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: osx
     env:
@@ -342,6 +365,7 @@ jobs:
     env:
     - CFLAGS_EXTRA="-funsigned-char -D _FORTIFY_SOURCE=2 -D DONT_ADD_BYTE_AT_END -D GC_TIME_LIMIT=3"
     - CONF_OPTIONS="--enable-gc-assertions --enable-cplusplus"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - addons:
       apt:
         packages:
@@ -350,14 +374,17 @@ jobs:
     env:
     - CFLAGS_EXTRA="-m32 -D _FORTIFY_SOURCE=2 -D MARK_BIT_PER_OBJ -D USE_CUSTOM_SPECIFIC"
     - CONF_OPTIONS="--enable-gc-assertions"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: clang
     env:
     - CFLAGS_EXTRA="-D MARK_BIT_PER_OBJ"
     - CONF_OPTIONS="--enable-cplusplus --enable-rwlock --disable-shared"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: gcc
     env:
     - CFLAGS_EXTRA="-D _FORTIFY_SOURCE=2 -D NO_CLOCK -D POINTER_MASK=~0xf"
     - CONF_OPTIONS="--enable-gc-assertions --enable-cplusplus --enable-handle-fork=manual"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: gcc
     env:
     - CFLAGS_EXTRA="-D PROC_VDB -D GC_NO_SYS_FAULT_H -D NO_INCREMENTAL -D DEBUG_DIRTY_BITS"
@@ -386,20 +413,24 @@ jobs:
   - compiler: clang
     env:
     - CONF_OPTIONS="--disable-thread-local-alloc --enable-cplusplus --enable-static"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - compiler: gcc
     env:
     - CFLAGS_EXTRA="-O3 -flto -D _FORTIFY_SOURCE=2 -D NO_MANUAL_VDB"
     - CONF_OPTIONS="--disable-parallel-mark --disable-thread-local-alloc --enable-gc-assertions --enable-cplusplus"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: gcc
     env:
     - CONF_OPTIONS="--enable-gc-debug --enable-cplusplus"
   - compiler: gcc
     env:
     - CONF_OPTIONS="--disable-gc-debug --enable-cplusplus"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: clang
     env:
     - CONF_OPTIONS="--enable-large-config --enable-cplusplus --disable-shared --enable-static"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: osx
     env:
@@ -417,10 +448,12 @@ jobs:
     env:
     - CONF_OPTIONS="--enable-large-config --disable-munmap"
     - CFLAGS_EXTRA="-m32"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: gcc
     env:
     - CONF_OPTIONS="--enable-large-config --enable-cplusplus --enable-gc-assertions --enable-static"
     - CFLAGS_EXTRA="-D LINT2 -D NO_VDB_FOR_STATIC_ROOTS -D TEST_REUSE_SIG_SUSPEND"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: gcc
     env:
     - CONF_OPTIONS="--enable-large-config --enable-redirect-malloc --disable-threads"
@@ -448,6 +481,7 @@ jobs:
     env:
     - CONF_OPTIONS="--disable-threads --enable-cplusplus"
     - CFLAGS_EXTRA="-O3 -march=native"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - compiler: gcc
     env:
@@ -462,6 +496,7 @@ jobs:
   - compiler: clang
     env:
     - CMAKE_OPTIONS="-Denable_cplusplus=ON -Denable_gc_assertions=ON"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - addons:
       apt:
@@ -470,9 +505,11 @@ jobs:
     compiler: clang
     env:
     - CMAKE_OPTIONS="-Denable_cplusplus=ON -Denable_munmap=OFF -Dwith_libatomic_ops=ON"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: gcc
     env:
     - CMAKE_OPTIONS="-DCMAKE_BUILD_TYPE=Release -Denable_cplusplus=ON -Denable_large_config=ON"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - compiler: gcc
     env:
@@ -480,6 +517,7 @@ jobs:
   - compiler: gcc
     env:
     - CMAKE_OPTIONS="-DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF -Denable_threads=OFF"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: osx
     env:
@@ -495,10 +533,12 @@ jobs:
     env:
     - MAKEFILE_NAME=Makefile.direct
     - MAKEFILE_TARGETS="check cord/de"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: gcc
     env:
     - MAKEFILE_NAME=Makefile.direct
     - MAKEFILE_TARGETS="check cord/de"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - os: osx
     env:
     - MAKEFILE_NAME=Makefile.direct
@@ -511,6 +551,7 @@ jobs:
     language: c
     env:
     - CONF_OPTIONS="--disable-parallel-mark --enable-gc-assertions"
+    - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: clang
     dist: xenial
     env:
@@ -541,13 +582,15 @@ jobs:
     env:
     - CFLAGS_EXTRA="-fsanitize=memory -fno-omit-frame-pointer -std=gnu11"
     - CONF_OPTIONS="--enable-static"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - TESTS_CUSTOM_RUN=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - compiler: clang
     env:
     - CFLAGS_EXTRA="-fsanitize=undefined -fno-common -fno-omit-frame-pointer"
-    - TESTS_CUSTOM_RUN=true
     - CONF_OPTIONS="--enable-cplusplus --enable-static"
+    - GCTEST_WITH_MPROTECT_VDB=true
+    - TESTS_CUSTOM_RUN=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - compiler: gcc
     env:
@@ -578,6 +621,7 @@ jobs:
     env:
     - CFLAGS_EXTRA="-O3 -march=native -D NTHREADS=10"
     - CONF_OPTIONS="--enable-cplusplus --enable-static --enable-single-obj-compilation"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - addons:
       apt:
@@ -601,6 +645,7 @@ jobs:
     env:
     - CFLAGS_EXTRA="-m32 -O3 -std=gnu11"
     - CONF_OPTIONS="--disable-shared --enable-static --enable-single-obj-compilation"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - addons:
       apt:
@@ -614,6 +659,7 @@ jobs:
     env:
     - CFLAGS_EXTRA="-mx32 -march=native -D _FORTIFY_SOURCE=2"
     - CONF_OPTIONS="--enable-large-config --enable-gc-assertions"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - compiler: clang
     env:
@@ -627,6 +673,7 @@ jobs:
     - CONF_OPTIONS="--enable-gc-assertions"
     - MAKEFILE_TARGETS="all"
     - MAKEFILE_TARGETS_CHECK="check"
+    - GCTEST_WITH_MPROTECT_VDB=true
     - NO_CLONE_LIBATOMIC_OPS=true
   - compiler: gcc
     env:
@@ -791,6 +838,9 @@ script:
 - if [[ "$TESTS_CUSTOM_RUN" == true ]]; then
     ASAN_OPTIONS="detect_leaks=1" UBSAN_OPTIONS="halt_on_error=1"
         make check-without-test-driver;
+  fi
+- if [[ "$GCTEST_WITH_MPROTECT_VDB" == true ]]; then
+    GC_USE_GETWRITEWATCH=0 ./gctest;
   fi
 
 after_success:
