--- a/.travis.yml
+++ b/.travis.yml
@@ -103,8 +103,8 @@ jobs:
         - libatomic-ops-dev
     env:
     - MAKEFILE_TARGETS="distcheck"
-    - GC_REAL_VERSION=7.2q
-    - AO_SRC_VER=v7.2k
+    - GC_REAL_VERSION=7.2r
+    - AO_SRC_VER=v7.2l
 
 before_install:
 - if [[ "$MAKEFILE_TARGETS" == *"dist"* ]]; then
