--- a/.travis.yml
+++ b/.travis.yml
@@ -504,7 +504,7 @@ jobs:
         - libatomic-ops-dev
     compiler: clang
     env:
-    - CMAKE_OPTIONS="-Denable_cplusplus=ON -Denable_munmap=OFF -Dwith_libatomic_ops=ON"
+    - CMAKE_OPTIONS="-Denable_atomic_uncollectable=OFF -Denable_cplusplus=ON -Denable_munmap=OFF -Dwith_libatomic_ops=ON"
     - GCTEST_WITH_MPROTECT_VDB=true
   - compiler: gcc
     env:
