Provide mechanism to track allocations with heap profiling tools
Tools such as Valgrind's massif[1] and KDE heaptrack[2] work by
intercepting dynamically linked allocator calls so that they can do
their own bookkeeping for tracking memory usage. While this enables them
to trivially hook into any of the BDWGC calls which allocate, they
aren't currently able to tell when the GC frees memory.

This commit introduces a new function to the API,
`GC_free_profiler_hook`, which is called for each object during the
reclaim phase of the GC. It provides a stub for heap profiling tools
to override so that they can see which objects were freed.

This functionality is feature gated behind the `-DVALGRIND_TRACKING`
flag.

[1]: https://valgrind.org/docs/manual/ms-manual.html
[2]: https://github.com/KDE/heaptrack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ option(enable_emscripten_asyncify "Use Emscripten asyncify feature" OFF)
 option(install_headers "Install header and pkg-config metadata files" ON)
 option(with_libatomic_ops "Use an external libatomic_ops" OFF)
 option(without_libatomic_ops "Use atomic_ops.h in libatomic_ops/src" OFF)
+option(enable_track_valgrind "Support tracking GC_malloc and friends for heap profiling tools" OFF)
 
 # Override the default build type to RelWithDebInfo (this instructs cmake to
 # pass -O2 -g -DNDEBUG options to the compiler by default).
@@ -713,6 +714,10 @@ if (build_cord)
           RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
           INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
 endif(build_cord)
+
+if (enable_valgrind_tracking)
+  add_definitions("-DVALGRIND_TRACKING")
+endif()
 
 if (BUILD_SHARED_LIBS AND HAVE_FLAG_WL_NO_UNDEFINED)
   # Declare that the libraries do not refer to external symbols.
