Provide mechanism to track allocations with heap profiling tools
PR #621 (bdwgc).

Tools such as Valgrind's massif and KDE heaptrack work by intercepting
dynamically linked allocator calls so that they can do their own
bookkeeping for tracking memory usage.  While this enables them to
trivially hook into any of the BDWGC calls which allocate, they are
not currently able to tell when the collector frees memory.

This commit introduces a new function (GC_free_profiler_hook) to the
API, which is called for each object during the reclaim phase of the
collector.  The function is really a stub for heap profiling tools to
override so that they can see which objects were freed.

This functionality is available only if the collector is built with
configure `--enable-valgrind-tracking` option (or similar in cmake and
zig build scripts), or by passing `-D VALGRIND_TRACKING` to CFLAGS
directly.

* CMakeLists.txt (enable_valgrind_tracking): New option.
* build.zig (enable_valgrind_tracking): Likewise.
* configure.ac (valgrind-tracking): Likewise.
* CMakeLists.txt [enable_valgrind_tracking] (VALGRIND_TRACKING): Define
C macro (add to flags).
* build.zig [enable_valgrind_tracking] (VALGRIND_TRACKING): Likewise.
* configure.ac [enable_valgrind_tracking] (VALGRIND_TRACKING):
Likewise.
* allchblk.c [VALGRIND_TRACKING] (GC_free_profiler_hook): Implement.
* docs/README.macros (VALGRIND_TRACKING): Document.
* include/gc/gc.h (GC_free_profiler_hook): New API function (callback).
* include/private/gc_priv.h (FREE_PROFILER_HOOK): Define macro.
* malloc.c (GC_free): Call FREE_PROFILER_HOOK().
* reclaim.c (GC_reclaim_clear, GC_reclaim_uninit, GC_reclaim_block):
Likewise.
* reclaim.c [ENABLE_DISCLAIM]
(GC_disclaim_and_reclaim_or_free_small_block): Likewise.
* reclaim.c [VALGRIND_TRACKING] (GC_reclaim_block): Call
FREE_PROFILER_HOOK() for each non-marked object in hbp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ option(enable_rwlock "Enable reader mode of the allocator lock" OFF)
 option(enable_throw_bad_alloc_library "Turn on C++ gctba library build" ON)
 option(enable_gcj_support "Support for gcj" ON)
 option(enable_sigrt_signals "Use SIGRTMIN-based signals for thread suspend/resume" OFF)
+option(enable_valgrind_tracking "Support tracking GC_malloc and friends for heap profiling tools" OFF)
 option(enable_gc_debug "Support for pointer back-tracing" OFF)
 option(disable_gc_debug "Disable debugging like GC_dump and its callees" OFF)
 option(enable_java_finalization "Support for java finalization" ON)
@@ -338,6 +339,10 @@ endif()
 
 if (enable_atomic_uncollectable)
   add_definitions("-DGC_ATOMIC_UNCOLLECTABLE")
+endif()
+
+if (enable_valgrind_tracking)
+  add_definitions("-DVALGRIND_TRACKING")
 endif()
 
 if (enable_gc_debug)
